Add leaderboard pagination, caching, and fixes
LeaderboardCommand: implement paginated leaderboard embeds with Prev/Next buttons, track message pages, add buildLeaderboardEmbed helper, handle button interactions and disabled states, and improve member lookup handling. Scheduler: change periodic task interval from 30 seconds to 2 minutes. MatchDataUtil: introduce cached lists and timestamps for live/upcoming/past matches and add caching logic for upcoming matches (uses cached data for subsequent requests), plus log messages.